==> Jordan-Szwejda/weact-eink-ch32-example/src/Epaper/epaper.cpp <==
#include "epaper.h"
#include "epdfont.h"
#include "debug.h"
#include <ch32v00x_gpio.h>
#include <gpio.h>
#define PIN_RESET PC0
#define PIN_BUSY PC1
#define PIN_DC PC2
#define PIN_CS PC3
#define PIN_SCK PC5
#define PIN_MOSI PC6

void epd_res_set()
{
  GPIO::digitalWrite(PIN_RESET, true);
  //GPIO_SetBits(GPIOA, GPIO_Pin_8);
}

void epd_res_reset()
{
  GPIO::digitalWrite(PIN_RESET, false);
  //GPIO_ResetBits(GPIOA, GPIO_Pin_8);
}

void epd_dc_set()
{
  GPIO::digitalWrite(PIN_DC, true);
  //GPIO_SetBits(GPIOB, GPIO_Pin_14);
}

void epd_dc_reset()
{
  GPIO::digitalWrite(PIN_DC, false);
  //GPIO_ResetBits(GPIOB, GPIO_Pin_14);
}

void epd_cs_set()
{
  GPIO::digitalWrite(PIN_CS, true);
  //GPIO_SetBits(GPIOB, GPIO_Pin_12);
}

void epd_cs_reset()
{
  GPIO::digitalWrite(PIN_CS, false);
  //GPIO_ResetBits(GPIOB, GPIO_Pin_12);
}

uint8_t epd_is_busy()
{
  return GPIO::digitalRead(PIN_BUSY);
  //return GPIO_ReadInputDataBit(GPIOA, GPIO_Pin_15) == Bit_RESET ? 0 : 1;
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  SPI_I2S_SendData(SPI1, reg);
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  SPI_I2S_SendData(SPI1, data);
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{

  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET)
    ;
  SPI_I2S_SendData(SPI1, data);
}

void _epd_write_data_over()
{
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET)
    ;
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
