==> yym36100/eink/Core/Src/epaper.c <==
#include "epaper.h"
#include "epdfont.h"
#include "main.h"

void epd_res_set() {
	//gpio_bits_set(GPIOA, GPIO_PINS_8);
	HAL_GPIO_WritePin(eink_res_GPIO_Port, eink_res_Pin, 1);
}

void epd_res_reset() {
	//gpio_bits_reset(GPIOA, GPIO_PINS_8);
	HAL_GPIO_WritePin(eink_res_GPIO_Port, eink_res_Pin, 0);
}

void epd_dc_set() {
	//gpio_bits_set(GPIOB, GPIO_PINS_14);
	HAL_GPIO_WritePin(eink_dc_GPIO_Port, eink_dc_Pin, 1);
}

void epd_dc_reset() {
	//gpio_bits_reset(GPIOB, GPIO_PINS_14);
	HAL_GPIO_WritePin(eink_dc_GPIO_Port, eink_dc_Pin, 0);
}

void epd_cs_set() {
	//gpio_bits_set(GPIOB, GPIO_PINS_12);
	HAL_GPIO_WritePin(eink_cs_GPIO_Port, eink_cs_Pin, 1);
}

void epd_cs_reset() {
	//gpio_bits_reset(GPIOB, GPIO_PINS_12);
	HAL_GPIO_WritePin(eink_cs_GPIO_Port, eink_cs_Pin, 0);
}

uint8_t epd_is_busy() {
	//return gpio_input_data_bit_read(GPIOA, GPIO_PINS_9) == RESET ? 0 : 1;
	return HAL_GPIO_ReadPin(eink_busy_GPIO_Port, eink_busy_Pin);
}

void epd_write_reg(uint8_t reg) {
	epd_dc_reset();
	epd_cs_reset();

//  spi_i2s_data_transmit(SPI2, reg);
	HAL_SPI_Transmit(&hspi1, &reg, 1, 100);
	//while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)    ;
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);

	epd_cs_set();
	epd_dc_set();
}

void epd_write_data(uint8_t data) {
	epd_cs_reset();

	//spi_i2s_data_transmit(SPI2, data);
	HAL_SPI_Transmit(&hspi1, &data, 1, 100);
	//while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)    ;
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);

	epd_cs_set();
}

void _epd_write_data(uint8_t data) {
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
	//while (spi_i2s_flag_get(SPI2, SPI_I2S_TDBE_FLAG) == RESET)  ;
	//spi_i2s_data_transmit(SPI2, data);
	HAL_SPI_Transmit(&hspi1, &data, 1, 100);
}

void _epd_write_data_over() {
	//while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)  ;
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
}

void epd_writedata(uint8_t *Image1, uint32_t length) {
	epd_cs_reset();
	for (uint32_t j = 0; j < length; j++) {
		_epd_write_data(Image1[j]);
	}
	_epd_write_data_over();
	epd_cs_set();
}
